claramente arreglé el ide